--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,11 +1,11 @@
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.5.0
-  - smartcontractkit/chainlink-brownie-contracts@0.4.0
+  # - smartcontractkit/chainlink-brownie-contracts@0.4.0
 compiler:
   solc:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.5.0'
-      - '@chainlink=smartcontractkit/chainlink-brownie-contracts@0.4.0'
+      # - '@chainlink=smartcontractkit/chainlink-brownie-contracts@0.4.0'
 dotenv: .env
 wallets:
   development:
